<resources>
    <string name="app_name">InPhoMeet</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="kindly_enter_your_mobile_number_we_will_sent_you_an_one_time_password">Kindly enter your Mobile number we will sent you an One Time Password</string>
    <string name="for_eg_91_12345_67890">For Eg: +91–12345 67890</string>
    <string name="_91">+91-</string>
    <string name="enter_moblie_number">Enter Moblie Number</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP? </string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="start_exploring">Start Exploring</string>
    <string name="it_s_safe_amp_secure"><![CDATA[It\'s Safe & Secure]]></string>
    <string name="note_resend_works_only_after_ever_60_seconds">NOTE: Resend works only after ever 60 seconds</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="kindly_enter_you_firstname_and_lastname">Kindly enter you Firstname and Lastname</string>
    <string name="alex">Example : Alex</string>
    <string name="last_name">Last Name</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="example_dev">Example : Dev</string>
    <string name="done">DONE</string>
    <string name="email">Email</string>
    <string name="any_eg_in">any@eg.in</string>
    <string name="password">Enter Password</string>
    <string name="new_account">Create New Account</string>
    <string name="kindly_enter_your_details">Kindly Enter Your Details</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="_12345_67890">12345 67890</string>
    <string name="already_have_an_account_login_here">Already Have an Account? Login Here</string>
    <string name="login_with_phone">Continue via number</string>
    <string name="login_with_email">Continue via Email</string>
    <string name="login_with_google">Continue via Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logout">Logout</string>
    <string name="login_in">LOGIN IN</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_one">Create one</string>
    <string name="send_message">Send Message</string>
    <string name="messages_will_be_displayed">Messages will be displayed</string>
    <string name="menu">Menu</string>
    <string name="new_group">New Group</string>
    <string name="contacts">Contacts</string>

    <string name="invite">Invite</string>
    <string name="others">Others</string>
    <string name="faq_s">FAQ\'s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="home">HOME</string>
    <string name="test_fragment">Test Fragment</string>
    <string name="username">Username</string>
    <string name="alex1234">alex1234</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_s">Other\'s</string>
    <string name="min_6_max_12">Min:6 Max:12</string>
    <string name="enter_onetimepassword">Enter OneTimePassword</string>
    <string name="enterusername">Enter Username</string>
    <string name="enter_number">Enter Number</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="connected">Connected</string>
    <string name="ooops">Ooops!</string>
    <string name="no_internet_connection_found">No Internet Connection found</string>
    <string name="on_your_data_and_hit_restart">ON YOUR DATA AND HIT RESTART</string>
    <string name="restart">Restart</string>
    <string name="dashboard">Dashboard</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
</resources>