<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SendOTPActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/paper">

    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/kindly_enter_your_mobile_number_we_will_sent_you_an_one_time_password"
        android:textColor="@color/colorTextSecondary"
        android:textSize="14sp">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/enter_moblie_number"
        android:textColor="@color/colorAccent"
        android:textSize="14sp">

    </TextView>
    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/_91"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
        <EditText
            android:layout_width="wrap_content"
            android:background="@null"
            android:id="@+id/inputMobile"
            android:hint="@string/_1234567890"
            android:layout_height="30dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold">

        </EditText>
        <ProgressBar
            android:id="@+id/pro"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:progress="100"
            android:progressDrawable="@color/colorDivider"
            />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/background_button"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/get_otp"
            android:id="@+id/buttonOTPSend"
            android:textColor="@color/colorWhite">
        </Button>
        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="gone">
        </ProgressBar>
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/already_have_an_account_login_here"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center">

    </TextView>
</LinearLayout>
</ScrollView>
