<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="300dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/noconnection">
    </com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ooops"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/nettext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection_found"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/on_your_data_and_hit_restart"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/restartapp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/restart"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:background="@color/colorPrimary"/>

</LinearLayout>