<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainLoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/purple_crystal">
        </ImageView>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/blue_boxloding">
        </com.airbnb.lottie.LottieAnimationView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold">

        </TextView>
    <Button
        android:id="@+id/btnPhone"
        android:layout_margin="30dp"
        android:background="@drawable/mainbg"
        android:drawableLeft="@drawable/ic_contact_phone_white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_with_phone" />

<!--        <Button-->
<!--            android:id="@+id/btnEmail"-->
<!--            android:layout_margin="30dp"-->
<!--            android:drawableLeft="@drawable/ic_email_white"-->
<!--            android:background="@drawable/mainbg"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/login_with_email" />-->
        <Button
            android:id="@+id/btnGoogle"
            android:layout_margin="30dp"
            android:background="@drawable/mainbg"
            android:drawableLeft="@drawable/ic_white_account_circle"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="300dp"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google" />

    </LinearLayout>
</ScrollView>